<resources>

    <string name="app_name">LogSwitch</string>
    <string name="mtk6580_m_log_title">MTK6580 Marshmallow</string>
    <string name="log_switch_label">Log Switch</string>
    <string name="mtk6580_m_log_switch">MTk6580M Log Switch</string>
    
    <string name="custom_parameter_settings_category_title">Custom Parameter Settings</string>
    <string name="custom_parameter_settings_title">Custom Parameter Settings Log</string>
    <string name="antutu_settings_title">AnTuTu Parameter Settings Log</string>
    <string name="ludashi_settingS_title">LuDaShi Parameter Settings Log</string>
    <string name="youhudashi_settings_title">360 YouHuDaShi Parameter Setting Log</string>

</resources>
