<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory 
        android:key="custom_parameter_settings_category_key"
        android:title="@string/custom_parameter_settings_category_title">
        
        <SwitchPreference 
            android:key="custom_parameter_serttings_key"
            android:title="@string/custom_parameter_settings_title"/>
        
        <SwitchPreference 
            android:key="antutu_settings_key"
            android:title="@string/antutu_settings_title"/>
        
        <SwitchPreference 
            android:key="ludashi_settings_key"
            android:title="@string/ludashi_settingS_title"/>
        
        <SwitchPreference 
            android:key="youhudashi_settings_key"
            android:title="@string/youhudashi_settings_title"/>
        
    </PreferenceCategory>

</PreferenceScreen>
